Closed Bug 141317 Opened 22 years ago Closed 22 years ago

CopyToLowerCase produces strings with random content

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: KaiE, Assigned: KaiE)

References

Details

(Whiteboard: [adt2 rtm],custrtm-)

Attachments

(1 file, 1 obsolete file)

CopyToLowerCase produces strings with random content

It only copies the chars that need conversion.
More related helper classes seem to have this bug.
I'll attach a fix.
Blocks: 130692
Attached patch Suggested fix (obsolete) — Splinter Review
This fixes 4 methods, all having the same bug.
Attached patch Updated fixSplinter Review
Jag convinced me that only 2 of the 4 locations require my change, because the
convert classes already have the buffer filled.
Attachment #81759 - Attachment is obsolete: true
Jag, Alec, can you please r/sr ?
Comment on attachment 81774 [details] [diff] [review]
Updated fix

bwah!
good catch!
sr=alecf
Attachment #81774 - Flags: superreview+
Comment on attachment 81774 [details] [diff] [review]
Updated fix

r=jag
Attachment #81774 - Flags: review+
Jag, do we want this patch on the branch? Nominating.
Keywords: mozilla1.0, nsbeta1
Checked in to trunk, fixed.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Actually, I need to nominate this bug for branch checkin, because it blocks bug
130692.
Keywords: nsbeta1adt1.0.0, nsbeta1+
Whiteboard: [adt2 rtm]
Yes, I suggest we take this on the branch.
Comment on attachment 81774 [details] [diff] [review]
Updated fix

a=scc for checkin to the mozilla1.0 branch
Attachment #81774 - Flags: approval+
let's get this one in after rc2. adt1.0.0- [adt2 rtm]
Keywords: adt1.0.0adt1.0.0-
this is a nasty bug. how did we come across it though? is it botching our UI
somewhere?
Jud, I came across it when I produced a patch for bug 130692.
Re-nominating.
Keywords: adt1.0.0-adt1.0.0
Would junruh@netscape.com be the right person to verify this one on the trunk?
Blocks: 143047
a=rjesup@wgate.com re-approved for branch checkin
Jaime, this bug can not yet be verified by QA, it can only be verified by
looking at the code.

However, there are several areas in Mozilla that use this piece of code, and it
could potentially cause random problems, that might be difficult to reproduce.
We just don't know yet a reproducable effect of this bug.

Look at comment 4 and comment 12 for reactions about the seriousness of this bug.

I recommend to check this code in to the branch. It was checked in to the trunk
two weeks ago and nobody complained since then.
thanks for the explanation Kaie.

adt1.0.0+ (on ADT's behalf) for approval to checkin to the 1.0 branch.  After,
checking in, please add the fixed1.0 keyword.
Keywords: adt1.0.0adt1.0.0+
Checked in to branch.
Keywords: adt1.0.0+fixed1.0.0
Whiteboard: [adt2 rtm] → [adt2 rtm],custrtm-
Verified per kaie's comment.
Status: RESOLVED → VERIFIED
Component: String → XPCOM
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: