b=141317 CopyToLowerCase produces strings with random content r=jag sr=alecf